Save, edit, and delete the balance

--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -39,7 +39,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    app:layout_constraintGuide_percent="0.03" />
+                    app:layout_constraintGuide_begin="@dimen/titles_margin" />
 
                 <androidx.constraintlayout.widget.Guideline
                     android:id="@+id/guideline11"
