--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
 
     <dimen name="main_margin">25dp</dimen>
     <dimen name="titles_margin">16dp</dimen>
+    <dimen name="_20dp">20dp</dimen>
 </resources>
