--- a/app/src/main/res/layout/fragment_list_pager.xml
+++ b/app/src/main/res/layout/fragment_list_pager.xml
@@ -14,20 +14,35 @@
         android:clipToPadding="false"
         tools:context=".ui.home.fragments.list.ListPagerFragment">
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnExport"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
+            android:background="@drawable/curved_gradient_background"
+            android:text="Export Payments"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvExpenses"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
             android:clipChildren="false"
             android:clipToPadding="false"
             android:paddingStart="25dp"
-            android:paddingBottom="65dp"
             android:paddingEnd="25dp"
+            android:paddingBottom="65dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btnExport"
             tools:itemCount="10"
             tools:listitem="@layout/item_payment" />
 
