--- a/app/src/main/res/layout/fragment_list_pager.xml
+++ b/app/src/main/res/layout/fragment_list_pager.xml
@@ -21,9 +21,10 @@
             android:layout_marginStart="25dp"
             android:layout_marginEnd="25dp"
             android:background="@drawable/curved_gradient_background"
-            android:text="Export Payments"
+            android:text="@string/export_payments"
             android:textAllCaps="false"
             android:textColor="@color/white"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Incomes"
+            android:text="@string/incomes"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
