--- a/app/src/main/res/layout/item_payment.xml
+++ b/app/src/main/res/layout/item_payment.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="item"
-            type="com.abdosharaf.paymentstracker.models.PaymentItem" />
+            type="com.abdosharaf.paymentstracker.models.ExpenseItem" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
